--- a/My Tetris/index.html
+++ b/My Tetris/index.html
@@ -39,7 +39,7 @@
         <div><img type="image/png" src="./img/right.png" width="30" height="30"/> RIGHT<br></div>
         <div><img type="image/png" src="./img/down.png" width="30" height="30"/> DOWN<br></div>
         <div><img type="image/png" src="./img/p.png" width="30" height="30"/> PAUSE<br></div>
-        <div><img type="image/png" src="./img/space1.png" width="60" height="30"/> HARD DROP<br></div>
+        <div><img type="image/png" src="./img/space.png" width="60" height="30"/> HARD DROP<br></div>
         <div><img type="image/png" src="./img/esc.png" width="30" height="30"/> END GAME<br></div>
       </div>
     </div>
